<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pavel.wetableinterface.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/count_of_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animals_counter"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <EditText
            android:id="@+id/name_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cat_name_hint"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/add_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_name_button" />
        <EditText
            android:id="@+id/name_dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dog_name_hint"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/add_dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_name_button" />

        <Button
            android:id="@+id/wet_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wet_all"
            android:layout_marginTop="75sp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
